--- a/LinhaTempo.html
+++ b/LinhaTempo.html
@@ -35,7 +35,8 @@
      }
     
      p{
-         font-size: 90%;
+         font-size: smaller; 
+
      }
      #linha{
        display: flex;
@@ -94,10 +95,12 @@
             <div class="empresa"><p>Fase Informatica/Bank Pontual<br/>Delphi programmer with Oracle</p></div>
             <div class="empresa"><p>Fapesp<br/>Programming Intern in Pascal, C and Novell network management </p></div>
         </div>
+       <!--
         <progress id="file" value="32" max="100"> 32% </progress>
         <progress id="file" value="80" max="100"> 80% </progress>
         <progress id="file" value="80" max="100"> 80% </progress>
         <progress id="file" value="80" max="100"> 80% </progress>
+    -->
     </div>
     
    
