--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <tr>
                     <th>Institution</th>
                     <th>Course</th>
-                    <th>finished in</th>
+                    <th>Finished in</th>
                 </tr>
             </thead>
             <tbody>
