--- a/LinhaTempo.html
+++ b/LinhaTempo.html
@@ -15,7 +15,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: rgb(219, 174, 75);  
+        background-color: #ffff26;  
         width: 60px;
         height: 60px;  
         border: 1px solid coral ;
@@ -40,7 +40,7 @@
      }
      #linha{
        display: flex;
-       background-color: rgb(245, 245, 202);
+       background-color: #f5f5ca;
        height: 300PX;
        justify-content: space-around;
        align-items: center;
@@ -61,7 +61,7 @@
      }
 
      #central{
-        background-color: rgb(219, 174, 75);  
+        background-color: #e9b335 ; 
         width: 100%;
         height: 5px;
         border: 1px solid salmon;
