--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
 
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="shortcut icon" href="images/caricatura.jpeg" type="image/x-icon">
     <title>Leonardo Tarrou</title>
 
 </head>
@@ -75,13 +76,13 @@
                 <h3>Some paintings painted by Tarrou</h3>
                 <div id="pinturas">
                     <div class="card">
-                        <img src="images/tempestade.jpg" alt="Avatar" style="width:100%">
+                        <img src="images/tempestade.jpg" alt="Pintura Tempestade" style="width:100%">
                         <div class="container">
                             <h4><b>A Tempestade</b></h4>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="images/PordoSol.jpg" alt="Avatar" style="width:100%">
+                        <img src="images/PordoSol.jpg" alt="Pintura Pôr do Sol" style="width:100%">
                         <div class="container">
                             <h4><b>Pôr do Sol</b></h4>
 
@@ -180,14 +181,14 @@
         </p>
         <ul>
 
-            <li><a href="https://www.linkedin.com/in/leonardo-tarrou-59850b226/" target="_blank"
-                    rel="noopener noreferrer"><img src="https://img.icons8.com/color/48/000000/linkedin.png" /></a></li>
-            <li><a href="#" target="_blank" rel="noopener noreferrer"><img
-                        src="https://img.icons8.com/color/48/000000/discord-logo.png" /></a></li>
-            <li><a href="https://github.com/Tarrou501" target="_blank" rel="noopener noreferrer"><img
-                        src="https://img.icons8.com/color/48/000000/github--v1.png" /></a></li>
+            <li><a href="https://www.linkedin.com/in/leonardo-tarrou-59850b226/" target="_blank" 
+                    rel="noopener noreferrer"><img src="https://img.icons8.com/color/48/000000/linkedin.png" alt="icone do linkedin"/></a></li>
+            <li><a href="#" target="_blank"  rel="noopener noreferrer"><img
+                        src="https://img.icons8.com/color/48/000000/discord-logo.png" alt="icone discord" /></a></li>
+            <li><a href="https://github.com/Tarrou501" target="_blank"  rel="noopener noreferrer"><img
+                        src="https://img.icons8.com/color/48/000000/github--v1.png" alt="icone github" /></a></li>
             <li><a href="mailto:tarroung@gmail.com" target="_blank" rel="noopener noreferrer"><img
-                        src="https://img.icons8.com/external-nawicon-flat-nawicon/48/000000/external-email-communication-nawicon-flat-nawicon-2.png" /></a>
+                        src="https://img.icons8.com/external-nawicon-flat-nawicon/48/000000/external-email-communication-nawicon-flat-nawicon-2.png" alt="icone mail"/></a>
             </li>
         </ul>
     </footer>
