iframe tratamento width e height

--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
         </table>
         <hr>
         <h1>Professional Backgroud</h1>
-        <div id="professionalback">
-            <iframe src="LinhaTempo.html" title="Professional Backgroud" width="100%" height="300px">
+        <div id="professionalback"  >
+            <iframe src="LinhaTempo.html" title="Professional Backgroud"  >
             </iframe>
         </div>
 
